# irsdk-rs

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
crates/ibt/: Cargo.toml
crates/ibt/examples/: dump_bitfield.rs  dump_file.rs  dump_session_string.rs  dump_var.rs  list_available_vars.rs
crates/ibt/src/: file.rs  lib.rs  raw.rs
crates/ibt/src/telemetry/: bitfields.rs  enums.rs  headers.rs  mod.rs  sample.rs  var.rs
crates/ibt/test-data/: raw_var_header
crates/irsdk/: Cargo.toml
crates/irsdk/examples/: list_available_live_vars.rs  stream_var.rs
crates/irsdk/src/: client.rs  lib.rs  win.rs
examples/: dump_bitfield.rs  dump_file.rs  dump_session_string.rs  dump_var.rs  list_available_vars.rs
src/: aligned.rs  file.rs  lib.rs  main.rs  raw.rs  telemetry.rs  test_utils.rs
src/telemetry/: bitfields.rs  enums.rs  headers.rs  mod.rs  record.rs  sample.rs  var.rs
test-data/: raw_header  raw_sub_header
