[package]
name = "irsdk"
version = "0.1.0"
edition = "2024"

[dependencies]
aligned-vec = "0.6.4"
bytemuck = { version = "1.24.0", features = ["derive", "extern_crate_alloc"] }
chrono = "0.4.42"
indexmap = "2.12.1"
num_enum = "0.7.5"
saphyr = "0.0.6"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
csv = "1.4.0"

[lints.clippy]
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
elidable_lifetime_names = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
ignore_without_reason = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
into_iter_without_iter = "warn"
manual_let_else = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
no_effect_underscore_binding = "warn"
redundant_closure_for_method_calls = "warn"
ref_option = "warn"
ref_option_ref = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
unwrap_used = "warn"
